# MAGI

./: .gitignore  README.md  context.py  context_career.txt  council.py  main.py  ollama.py  pyproject.toml  tally.py
magi/agents/: __init__.py  agent.py  personas.py  voting.py
magi/cli/: main.py  options.py  pool_config.py  runner.py
magi/council/: __init__.py  council.py  synthesis.py  tally.py
magi/llm/: __init__.py  base.py  ollama.py  pool.py
magi/mcp/: __init__.py  server.py  smoke.py
magi/tui/: __init__.py  app.py
