[project]
name = "magi"
version = "0.1.0"
description = "Local, GPU-accelerated multi-agent council (Evangelion MAGI style)"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "textual>=0.86"]

[project.scripts]
magi = "magi.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
